# identicon-styles

./: .gitignore  .travis.yml  README.md  cabal.project  identicon-styles.cabal  test.hs
Graphics/Identicon/: Styles.hs
squares/: ChangeLog.md  identicon-style-squares.cabal
squares/Graphics/Identicon/Styles/: Squares.hs
squares/tests/: squares.hs
tests/: squares.hs
