name:                identicon-styles
version:             0.1.0.0
synopsis:            Styles for the identicon package
-- description:         
homepage:            https://github.com/fgaz/identicon-styles
license:             BSD3
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          francygazz@gmail.com
-- copyright:           
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Graphics.Identicon.Styles
  -- other-modules:       
  other-extensions:    DataKinds, TypeOperators, TypeFamilies, UndecidableInstances, FlexibleContexts
  build-depends:       base >=4.9 && <4.10
                     , identicon >=0.2 && <0.3
                     , JuicyPixels >=3.2 && <3.3
                     , polyvariadic >=0.2 && <0.4
  -- hs-source-dirs:      
  default-language:    Haskell2010
